--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "bull": "^4.16.5",
+    "fluent-ffmpeg": "^2.1.3",
+    "formidable": "^3.5.4",
+    "ioredis": "^5.7.0",
+    "nanoid": "^5.1.5",
     "next": "15.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
