Setup for production deployment without Redis requirement
Features Added:
- Make Redis optional - app works with in-memory queue
- Add Vercel Analytics for tracking visitors and performance
- Graceful fallback when Redis is not available
- Console logging for queue type being used

Configuration Updates:
- Update environment variables to make Redis optional
- Add clear documentation for domain setup
- Set REDIS_URL=optional for in-memory queue usage

Domain Setup Guide:
- Complete GoDaddy DNS configuration instructions
- Step-by-step guide for pointing makeitlofi.com to Vercel
- Troubleshooting tips for common issues
- Analytics setup confirmation

This allows the app to run in production without requiring
a Redis instance, perfect for small-scale deployments while
maintaining the option to add Redis later for scale.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "bull": "^4.16.5",
     "fluent-ffmpeg": "^2.1.3",
     "formidable": "^3.5.4",
