--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 # Node environment
 NODE_ENV=development
 
-# Redis URL (optional for development, uses in-memory queue)
-REDIS_URL=
+# Redis URL (optional - leave empty or set to 'optional' to use in-memory queue)
+# For production with Redis: redis://default:password@endpoint.upstash.io:port
+REDIS_URL=optional
 
 # File limits
 MAX_FILE_SIZE=104857600
@@ -17,3 +18,6 @@ YOUTUBE_QUALITY=highestaudio
 # Processing options
 ENABLE_CLEANUP=true
 CLEANUP_INTERVAL=3600000
+
+# Vercel Analytics (automatically enabled when deployed to Vercel)
+# No configuration needed - it works automatically!
