--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@vercel/analytics": "^1.5.0",
     "bull": "^4.16.5",
     "fluent-ffmpeg": "^2.1.3",
