--- a/vercel.json
+++ b/vercel.json
@@ -6,13 +6,16 @@
   "regions": ["iad1"],
   "functions": {
     "app/api/jobs/route.ts": {
-      "maxDuration": 30
+      "maxDuration": 30,
+      "runtime": "nodejs20.x"
     },
     "app/api/jobs/[id]/route.ts": {
-      "maxDuration": 10
+      "maxDuration": 10,
+      "runtime": "nodejs20.x"
     },
     "app/api/download/[id]/[format]/route.ts": {
-      "maxDuration": 30
+      "maxDuration": 30,
+      "runtime": "nodejs20.x"
     }
   },
   "env": {
