--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@vercel/analytics": "^1.5.0",
     "bull": "^4.16.5",
+    "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "formidable": "^3.5.4",
     "ioredis": "^5.7.0",
