--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,8 @@
   "regions": ["iad1"],
   "functions": {
     "app/api/jobs/route.ts": {
-      "maxDuration": 30
+      "maxDuration": 60,
+      "includeFiles": "public/audio/textures/**"
     },
     "app/api/jobs/[id]/route.ts": {
       "maxDuration": 10
