--- a/package.json
+++ b/package.json
@@ -5,17 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "node server.js",
-    "start:worker": "node worker.js",
-    "start:all": "concurrently \"npm run start\" \"npm run start:worker\"",
+    "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "bull": "^4.16.5",
-    "concurrently": "^8.2.2",
-    "express": "^4.21.2",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "formidable": "^3.5.4",
