fix: complete production setup with texture support
- Upload all texture files (vinyl, tape, rain) to Vercel Blob
- Implement texture downloading and mixing in Lambda processor
- Fix download endpoint to redirect to Blob URLs
- Add AWS SDK dependencies for production build
- Exclude Lambda from Next.js TypeScript compilation
- Document all required environment variables
- Redeploy Lambda with full texture support

The app now includes authentic lo-fi textures (vinyl crackle, tape hiss, rain ambient) that are mixed with the processed audio for a true lo-fi experience.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.868.0",
+    "@aws-sdk/client-sqs": "^3.864.0",
+    "@aws-sdk/lib-dynamodb": "^3.868.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/blob": "^1.1.1",
     "bull": "^4.16.5",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
